tests/ui/block-result/block-must-not-have-result-do.rs
fn main() {
    loop {
        true //~  ERROR mismatched types
    }
}

// ferrocene-annotations: fls_hndm19t57wby
// Block Expressions
//
// ferrocene-annotations: fls_sf4qnd43z2wc
// Infinite Loops
